--- a/resources/public/css/theme.css
+++ b/resources/public/css/theme.css
@@ -1,3 +1,13 @@
+h3 {
+  font-size: 20px;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+.hand {
+  margin-left: 20px;
+}
+
 .card {
     display: inline-block;
     height: 123px;
