Dealing one card.

--- a/resources/public/css/theme.css
+++ b/resources/public/css/theme.css
@@ -4,6 +4,18 @@
     width:794px;
 }
 
+.facedown-card {
+    background: url(/img/cards.png);
+    background-position: -158px -492px;
+    height: 123px;
+    width: 79px;
+    
+    position: absolute;
+    top: 50px;
+    left: 360px;
+    z-index: 500;
+}
+
 .card {
     display: inline-block;
     height: 123px;
